# ffs

./: CMakeLists.txt  config.h.cmake  version.c
.github/workflows/: build-and-test.yml  triggers.yml
cod/: cg.c  cod.h
cod/pregen_source/Linux/: cod.tab.c  cod.tab.h
cod/pregen_source/Windows/: lex.yy.c
ffs/: ffs.c  ffs_conv.c  ffs_file.c  ffs_gen.c  ffs_marshal.c
ffs/tests/: CMakeLists.txt  adios2_bug.c
fm/: fm_dump.c  fm_formats.c  fm_get.c  fm_internal.h  http_client.c  io_interface.h  nt_io.c  unix_io.c
fm/progs/: CMakeLists.txt
fm/tests/: CMakeLists.txt  align_test.c  ls.bat  simple.c
scripts/ci/cmake/: windows-common.cmake  windows-vs2019-clang.cmake  windows-vs2019-msvc.cmake  windows2025-vs2026-clang.cmake  windows2025-vs2026-msvc-static.cmake  windows2025-vs2026-msvc-win32.cmake  windows2025-vs2026-msvc.cmake
scripts/ci/gh-actions/: run.sh
scripts/ci/setup/: install-atl.sh  install-dill.sh  windows.sh
